--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,10 +2,25 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Concert+One&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Yusei+Magic&display=swap');
 
+* {
+  margin: 0;
+  padding: 0;
+  font-family: sans-serif;
+}
+
 html, body, #root {
   height: 100%;
 }
 
+#root {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+
+
+/* REUSABLE CUSTOM STYLES */
 
 .custom-font {
   font-family: "Yusei Magic", sans-serif;
@@ -16,16 +31,73 @@ html, body, #root {
   color: #E3170A;
 }
 
+.flex {
+  display: flex;
+}
+
+
+
+/* NAV BAR STYLES */
+
 .logo {
   padding-right: 25%;
 }
 
 .navbar-bg {
   padding: 20px;
-  background-color: #e8e8e8;
+  background-color: #e8e8e8 !important;
 }
 
-.footer {
+
+
+/* BODY STYLES */
+
+.text-center {
+  text-align: center;
+}
+
+.display-flex {
+  display: flex;
+  margin: 35px 15%;
+  justify-content: center;
+  align-items: center;
+}
+
+
+
+/* PROFILE STYLES */
+
+  .profile-image {
+    border-radius: 50%;
+    background-image: url('./assets/images/squash_lady.jpg');
+    background-size: cover;
+    background-position: center;
+    height: 300px;
+    width: 300px;
+  }
+
+  .profile-page {
+    background-color: #efefef;
+    height: 100%;
+    display: flex;
+  }
+
+  .profile-block {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    margin-top: 50px;
+    margin-left: 50px;
+  }
+
+
+
+/* FOOTER STYLES */
+
+footer {
+  display: flex;
+  justify-content: space-between;
   background-color: #bfbfbf;
   padding: 40px 40px 20px;
 }
