--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -35,6 +35,14 @@ html, body, #root {
   display: flex;
 }
 
+.grid-wrapper {
+  display: inline-grid;
+  padding: 50px 30px;
+  margin-top: 75px;
+  grid-template-columns: repeat(3, 1fr);
+  text-align: center;
+}
+
 
 
 /* NAV BAR STYLES */
@@ -43,10 +51,27 @@ html, body, #root {
   padding-right: 25%;
 }
 
-.navbar-bg {
-  padding: 20px;
-  background-color: #e8e8e8 !important;
+.navbar-brand {
+  font-size: 1.75rem;
 }
+
+.navbar-bg {
+  padding: 15px;
+  background-color: #d8d8d8 !important;
+}
+
+.nav-link {
+  color: #000;
+  &.active {
+    color: #e16036;
+  }
+}
+
+.search-bar {
+  max-width: 450px;
+}
+
+
 
 
 
@@ -72,14 +97,17 @@ html, body, #root {
     background-image: url('./assets/images/squash_lady.jpg');
     background-size: cover;
     background-position: center;
-    height: 300px;
-    width: 300px;
+    height: 250px;
+    width: 250px;
   }
 
   .profile-page {
     background-color: #efefef;
     height: 100%;
+    width: 100%;
     display: flex;
+    justify-content: space-evenly;
+    margin-top: 50px;
   }
 
   .profile-block {
@@ -87,8 +115,30 @@ html, body, #root {
     flex-direction: column;
     align-items: center;
     text-align: center;
-    margin-top: 50px;
-    margin-left: 50px;
+    // margin-top: 50px;
+    // margin-left: 50px;
+  }
+
+  .diet-pref {
+    border: 2px solid #000;
+    width: 50%;
+      .diet-pref-title {
+        background-color: #efd6cc;
+        width: 100%;
+        padding: 10px 0 20px 0;
+          button {
+            padding: 5px 30px;
+            border: 2px solid #c7a1a1;
+            background-color: #ebe3e3;
+          }
+          button:hover{
+            background-color: #FC814A;
+          }
+      }
+  }
+
+  .diet-pref-list {
+    padding: 50px 0 0 0;
   }
 
 
