--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -2,13 +2,19 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Concert+One&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Yusei+Magic&display=swap');
 
+@import url('https://fonts.googleapis.com/css2?family=Concert+One&family=Figtree:ital,wght@0,300..900;1,300..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Quicksand:wght@300..700&family=Yusei+Magic&display=swap');
+
+
 * {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+  font-family: "Figtree", sans-serif;
 }
 
-html, body, #root {
+html,
+body,
+#root {
   height: 100%;
 }
 
@@ -18,13 +24,17 @@ html, body, #root {
   justify-content: space-between;
 }
 
+.container-fluid {
+  padding: 0 !important;
+}
 
 
-/* REUSABLE CUSTOM STYLES */
+
+/* REUSABLE CUSTOM STYLES ----------------------*/
 
 .custom-font {
-  font-family: "Yusei Magic", sans-serif;
-  /* font-family: "Concert One", sans-serif; */
+  // font-family: "Yusei Magic", sans-serif;
+  font-family: "Concert One", sans-serif;
 }
 
 .chili-red {
@@ -45,14 +55,15 @@ html, body, #root {
 
 
 
-/* NAV BAR STYLES */
+/* NAV BAR STYLES ---------------------------------*/
 
-.logo {
-  padding-right: 25%;
-}
+// .logo {
+
+// }
 
 .navbar-brand {
-  font-size: 1.75rem;
+  font-size: 2rem;
+  padding-right: 20px;
 }
 
 .navbar-bg {
@@ -62,6 +73,8 @@ html, body, #root {
 
 .nav-link {
   color: #000;
+  padding-right: 20px;
+
   &.active {
     color: #e16036;
   }
@@ -75,7 +88,7 @@ html, body, #root {
 
 
 
-/* BODY STYLES */
+/* BODY STYLES -----------------------------------*/
 
 .text-center {
   text-align: center;
@@ -90,60 +103,101 @@ html, body, #root {
 
 
 
-/* PROFILE STYLES */
+/* PROFILE STYLES --------------------------------*/
 
-  .profile-image {
-    border-radius: 50%;
-    background-image: url('./assets/images/squash_lady.jpg');
-    background-size: cover;
-    background-position: center;
-    height: 250px;
-    width: 250px;
+.profile-image {
+  border-radius: 50%;
+  border: 1px solid black;
+  background-image: url('./assets/images/squash_lady.jpg');
+  background-size: cover;
+  background-position: center;
+  height: 300px;
+  width: 300px;
+}
+
+.profile-page {
+  background-image: url('./assets/images/cutting_board_2.jpg');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-color: #efefef;
+  height: 100%;
+  width: 100%;
+  display: flex;
+  justify-content: space-evenly;
+  // margin-top: 50px;
+
+  // MEDIA QUERY 
+  $small: 800px;
+  
+    @media screen and (max-width: $small) {
+      display: flex;
+      flex-direction: column;
+      flex-wrap: wrap;
+    }
+
+}
+
+.profile-block {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  margin: auto;
+  h4 {
+    font-weight: 600;
   }
+}
 
-  .profile-page {
-    background-color: #efefef;
-    height: 100%;
+.diet-pref {
+  border: 2px solid #000;
+  width: 50%;
+  margin: 50px auto;
+
+  .diet-pref-title {
+    background-color: #ffffffdc;
     width: 100%;
-    display: flex;
-    justify-content: space-evenly;
-    margin-top: 50px;
+    padding: 10px 0 20px 0;
+
+    button {
+      padding: 5px 30px;
+      border: 2px solid #d8b3b3;
+      background-color: #ffffff;
+    }
+
+    button:hover {
+      background-color: #eab7a0;
+      color: #E3170A;
+    }
   }
+}
 
-  .profile-block {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-    // margin-top: 50px;
-    // margin-left: 50px;
-  }
+.diet-pref-list {
+  padding: 50px 0 0 0;
+  background-color: #f7f1f099;
+  width: 100%;
+  height: 100%;
+}
 
-  .diet-pref {
-    border: 2px solid #000;
-    width: 50%;
-      .diet-pref-title {
-        background-color: #efd6cc;
-        width: 100%;
-        padding: 10px 0 20px 0;
-          button {
-            padding: 5px 30px;
-            border: 2px solid #c7a1a1;
-            background-color: #ebe3e3;
-          }
-          button:hover{
-            background-color: #FC814A;
-          }
-      }
-  }
 
-  .diet-pref-list {
-    padding: 50px 0 0 0;
-  }
+// LOGIN AND SIGN UP -------------------
+
+.login-bg {
+  background-image: url(./assets/images/pie_1.jpg);
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  padding: 150px 0;
+}
+
+.white-bg {
+  background-color: #ffffff86;
+  padding: 30px 0;
+}
 
 
 
-/* FOOTER STYLES */
+/* FOOTER STYLES ------------------------*/
 
 footer {
   display: flex;
@@ -151,3 +205,5 @@ footer {
   background-color: #bfbfbf;
   padding: 40px 40px 20px;
 }
+
+
