--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -235,6 +235,13 @@ body,
   padding: 30px 0;
 }
 
+// Results
+.results-output {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 20px;
+}
+
 
 
 /* FOOTER STYLES ------------------------*/
