--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -5,6 +5,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Concert+One&family=Figtree:ital,wght@0,300..900;1,300..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Quicksand:wght@300..700&family=Yusei+Magic&display=swap');
 
 
+
+
 * {
   margin: 0;
   padding: 0;
@@ -54,12 +56,15 @@ body,
 
   // MEDIA QUERY 
   $small: 800px;
-  
-    @media screen and (max-width: $small) {
-      display: flex;
-      flex-direction: column;
-    }
+
+  @media screen and (max-width: $small) {
+    display: flex;
+    flex-direction: column;
+  }
 }
+
+
+
 
 .col {
   margin: 30px;
@@ -69,10 +74,10 @@ body,
 
   // MEDIA QUERY 
   $small: 800px;
-  
-    @media screen and (max-width: $small) {
-      height: 300px;
-    }
+
+  @media screen and (max-width: $small) {
+    height: 300px;
+  }
 }
 
 
@@ -146,8 +151,8 @@ body,
 }
 
 .profile-page {
-  background-image: url('./assets/images/squash_1.jpg');
-  background-position: bottom;
+  background-image: url('./assets/images/cutting_board.jpg');
+  background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
   background-color: #efefef;
@@ -159,12 +164,12 @@ body,
 
   // MEDIA QUERY 
   $small: 800px;
-  
-    @media screen and (max-width: $small) {
-      display: flex;
-      flex-direction: column;
-      flex-wrap: wrap;
-    }
+
+  @media screen and (max-width: $small) {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+  }
 
 }
 
@@ -176,6 +181,7 @@ body,
   margin: auto;
   width: 30%;
   height: 80%;
+
   h4 {
     font-weight: 600;
   }
@@ -183,7 +189,7 @@ body,
 
 .user-quote {
   border: 2px solid black;
-  width: 300px; 
+  width: 300px;
   background-color: #ffffffdc;
   margin-top: 20px;
   padding: 10px;
@@ -236,12 +242,134 @@ body,
   padding: 30px 0;
 }
 
-// Results
+// CREATE RECIPE FORM PAGE
+// .recipe-form-page {
+//   font-family: 'Poppins',sans-serif;
+//   padding: 20px;
+//   background-size: cover;
+// }
+
+// .recipe-form {
+//   max-width: 600px;
+//   margin: 0 auto;
+//   background: rgba(255, 255, 255, 0.9);
+//   padding:20px;
+//   border-radius: 8px;
+//   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+// }
+
+// .recipe-form h1 {
+//   font-family: 'Concert One', cursive;
+//   font-size: 2em;
+//   margin-bottom: 20px;
+//   color: #333;
+// }
+
+
+// RESULTS --------------------
+.search-result-bg {
+  background-image: url(./assets/images/apples.jpg);
+  height: 200px;
+  padding-top: 75px;
+  background-position: bottom;
+  background-size: cover;
+  color: white;
+}
+
 .results-output {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  gap: 20px;
+  gap: 75px;
 }
+
+.result-outline {
+  border: 2px solid #e5e5e5;
+  background-color: #f7f7f7;
+}
+
+button.btn-fav {
+  background-color: #998aa8;
+  color: white;
+  padding: 10px;
+  border-radius: 10px;
+  border: 2px solid #998aa8;
+
+  &:hover {
+    background-color: transparent;
+    color: #998aa8;
+    padding: 10px;
+    border-radius: 10px;
+    border: 2px solid #998aa8;
+  }
+
+  &:active {
+    background-color: #ddd;
+    color: #998aa8;
+    padding: 10px;
+    border-radius: 10px;
+    border: 2px solid #998aa8;
+  }
+}
+
+.btn-fav {
+  background-color: #998aa8;
+  color: white;
+  padding: 10px;
+  border-radius: 10px;
+  border: 2px solid #998aa8;
+  text-decoration: none;
+
+  &:hover {
+    background-color: transparent;
+    color: #998aa8;
+    padding: 10px;
+    border-radius: 10px;
+    border: 2px solid #998aa8;
+  }
+
+  &:active {
+    background-color: #ddd;
+    color: #998aa8;
+    padding: 10px;
+    border-radius: 10px;
+    border: 2px solid #998aa8;
+  }
+}
+
+
+
+// VIEW YOUR RECIPES ---------------
+
+.view-recipes-bg {
+  background-image: url(./assets/images/chestnuts.jpg);
+  height: 200px;
+  padding-top: 75px;
+  background-position: center;
+  background-size: cover;
+  color: white;
+}
+
+
+// VIEW YOUR FAVORITES 
+
+.view-fav-bg {
+  background-image: url(./assets/images/sandwich.jpg);
+  height: 200px;
+  padding-top: 75px;
+  background-position: center;
+  background-size: cover;
+  color: black;
+}
+
+
+
+
+
+// CONTACT FORM PAGE 
+#contact {
+  align-items: center;
+}
+
 
 
 
@@ -253,5 +381,3 @@ footer {
   background-color: #bfbfbf;
   padding: 40px 40px 20px;
 }
-
-
